<resources>
    <string name="app_name">Sunshine Medical Clinic</string>
    <string name="sunshinesplashpic">sunshineSplashPic</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="healthcard">Healthcard #:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="delete_user">Delete User</string>
    <string name="update_user">Update User</string>
    <string name="create_user">Create User</string>
    <string name="show_user">Show User</string>
    <string name="sex">Sex:</string>
    <string name="title_activity_find_locations">Map</string>
    <string name="call">Call</string>
    <string name="email">Email:</string>
    <string name="or_automatically_contact_us">Or automatically contact us!</string>
    <string name="select_a_date">Select a date</string>
    <string name="what_would_you_like_to_book">What would you like to book?</string>
    <string name="confirm_booking">confirm booking</string>
    <string name="general_appointment">General appointment</string>
    <string name="test_for_covid_19">Test for Covid-19</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register">Register</string>
    <string name="_1234567890">1234567890</string>
    <string name="john">John</string>
    <string name="smith">Smith</string>
    <string name="exSex">M/F</string>
    <string name="exPhone">XXX-XXX-XXXX</string>
    <string name="exDate">MM/DD/YYYY</string>
    <string name="john_smith12_gmail_com">john.smith12@gmail.com</string>
    <string name="already_registered_login_here">Already Registered? Login Here.</string>
    <string name="password">Password:</string>
    <string name="account_login">Account Login</string>
    <string name="login">Login</string>
    <string name="must_book_at_least_one_day_in_advance">(must book at least one day in advance)</string>
    <string name="new_user_create_account_here">New User? Create Account Here.</string>
</resources>