<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CRUDoperations">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/addHealthcardNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/healthcard"
            android:inputType="number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/addFName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/addLName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/addSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sex"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/addPhoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/addDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/retHealthcardNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/healthcard"
            android:inputType="number"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_user"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/showText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/updHealthcardNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/healthcard"
            android:inputType="number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/updFName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/updLName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/updPhoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_user"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/delHealthcardNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/healthcard"
            android:inputType="number"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_user"
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>