<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/date_of_birth"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/addDOB"
        app:layout_constraintTop_toBottomOf="@+id/addPhoneNo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/addPhoneNo"
        app:layout_constraintTop_toBottomOf="@+id/addSex" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="Create New Account"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addHealthcardNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="124dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="1234567890"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/addFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="John"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/addHealthcardNo"
        app:layout_constraintTop_toBottomOf="@+id/addHealthcardNo" />

    <EditText
        android:id="@+id/addLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="Smith"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/addFName"
        app:layout_constraintTop_toBottomOf="@+id/addFName" />

    <EditText
        android:id="@+id/addSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="M"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/addLName"
        app:layout_constraintTop_toBottomOf="@+id/addLName" />

    <EditText
        android:id="@+id/addPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="647-521-7831"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/addSex"
        app:layout_constraintTop_toBottomOf="@+id/addSex" />

    <EditText
        android:id="@+id/addDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="01/31/00"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/addPhoneNo"
        app:layout_constraintTop_toBottomOf="@+id/addPhoneNo" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Register"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPswd" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/healthcard"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/addHealthcardNo"
        app:layout_constraintTop_toTopOf="@+id/addHealthcardNo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/first_name"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/addFName"
        app:layout_constraintTop_toBottomOf="@+id/addHealthcardNo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/last_name"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/addLName"
        app:layout_constraintTop_toBottomOf="@+id/addFName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sex"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/addSex"
        app:layout_constraintTop_toBottomOf="@+id/addLName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Already Registered? Login Here."
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="Password: "
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/addPswd"
        app:layout_constraintTop_toBottomOf="@+id/addDOB" />

    <EditText
        android:id="@+id/addPswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/addDOB"
        app:layout_constraintTop_toBottomOf="@+id/addDOB" />
</androidx.constraintlayout.widget.ConstraintLayout>